--- a/briar-android/src/main/res/values-pt-rBR/strings.xml
+++ b/briar-android/src/main/res/values-pt-rBR/strings.xml
@@ -65,6 +65,9 @@
   <string name="transport_lan">Wi-fi</string>
   <!--Notifications-->
   <string name="reminder_notification_title">Saiu do Briar</string>
+  <string name="reminder_notification_text">Toque para fazer login novamente.</string>
+  <string name="reminder_notification_channel_title">Lembrete do Login do Briar</string>
+  <string name="reminder_notification_dismiss">Dispensar</string>
   <string name="ongoing_notification_title">Conectado ao Briar</string>
   <string name="ongoing_notification_text">Toque para abrir o Briar</string>
   <plurals name="private_message_notification_text">
@@ -107,6 +110,8 @@
   <string name="help">Ajuda</string>
   <string name="sorry">Sentimos muito</string>
   <!--Contacts and Private Conversations-->
+  <string name="no_contacts">Sem contatos para exibir</string>
+  <string name="no_contacts_action">Toque no ícone + para adicionar um contato</string>
   <string name="date_no_private_messages">Sem Mensagens</string>
   <string name="no_private_messages">Nenhuma mensagem para ser exibida</string>
   <string name="message_hint">Digite a mensagem</string>
@@ -128,11 +133,15 @@
   <string name="camera_error">Erro da câmera</string>
   <string name="connecting_to_device">Conectando a device\u2026</string>
   <string name="authenticating_with_device">Autenticando com o dispositivo\u2026</string>
+  <string name="connection_error_title">Não foi possível conectar-se ao seu contato</string>
+  <string name="connection_error_explanation">Por favor. certifique se ambos estão conectados na mesma rede Wi-Fi.</string>
+  <string name="connection_error_feedback">Se o problema persistir, for favor <a href="feedback">enviar feedback</a> para nós ajudar a melhor o app.</string>
   <!--Introductions-->
   <string name="introduction_onboarding_title">Apresente seus contatos</string>
   <string name="introduction_onboarding_text">Você pode apresentar seus contatos entre si, assim eles não precisam se encontrar pessoalmente para se comunicar no Briar.</string>
   <string name="introduction_menu_item">Fazer apresentação</string>
   <string name="introduction_activity_title">Selecionar contato</string>
+  <string name="introduction_not_possible">Você já tem uma introdução em andamento com esses contatos. Por favor, permita que isso termine primeiro. Se você ou seus contatos raramente estiverem on-line, isso pode levar algum tempo.</string>
   <string name="introduction_message_title">Apresentar contatos</string>
   <string name="introduction_message_hint">Adicione uma mensagem (opcional)</string>
   <string name="introduction_button">Fazer apresentação</string>
@@ -144,6 +153,7 @@
   <string name="introduction_request_exists_received">%1$s pediu para apresentar você a %2$s, mas %2$s já está na sua lista de contatos. Já que %1$s não sabe disso, você ainda pode responder:</string>
   <string name="introduction_request_answered_received">%1$s pediu para apresentar você a %2$s.</string>
   <string name="introduction_response_accepted_sent">Você aceitou ser apresentado a %1$s.</string>
+  <string name="introduction_response_accepted_sent_info">Antes de %1$sser adicionado nos seus contatos, ele também precisa aceitar a introdução. Isso pode demorar algum tempo.</string>
   <string name="introduction_response_declined_sent">Você recusou ser apresentado a %1$s.</string>
   <string name="introduction_response_accepted_received">%1$s aceitou ser apresentado a %2$s.</string>
   <string name="introduction_response_declined_received">%1$s recusou ser apresentado a %2$s.</string>
@@ -153,6 +163,8 @@
     <item quantity="other">%d novos contatos adicionados.</item>
   </plurals>
   <!--Private Groups-->
+  <string name="groups_list_empty">Sem grupos para exibir</string>
+  <string name="groups_list_empty_action">Toque no ícone + para criar um grupo, ou peça seus contatos compartilhar os grupos com você</string>
   <string name="groups_created_by">Criado por %s.</string>
   <plurals name="messages">
     <item quantity="one">%d mensagem</item>
@@ -205,6 +217,8 @@
   <string name="groups_reveal_visible_revealed_by_contact">Relação de contatos está visível para o Grupo (revelado por %s)</string>
   <string name="groups_reveal_invisible">Relação de contatos não visível para o Grupo </string>
   <!--Forums-->
+  <string name="no_forums">Sem Fóruns para exibir </string>
+  <string name="no_forums_action">Toque no ícone + para criar um forum, ou peça para seus contatos compartilhar forums com você </string>
   <string name="create_forum_title">Criar Fórum</string>
   <string name="choose_forum_hint">Escolha um nome para o seu fórum</string>
   <string name="create_forum_button">Criar fórum</string>
@@ -215,6 +229,7 @@
     <item quantity="one">%d Post</item>
     <item quantity="other">%d Posts</item>
   </plurals>
+  <string name="forum_new_entry_posted">Post do forum publicado</string>
   <string name="forum_new_message_hint">Nova postagem</string>
   <string name="forum_message_reply_hint">Nova resposta</string>
   <string name="btn_reply">Responder</string>
@@ -227,6 +242,8 @@
   <string name="forum_share_button">Compartilhar fórum</string>
   <string name="contacts_selected">Contatos Selecionados</string>
   <string name="activity_share_toolbar_header">Escolher contatos</string>
+  <string name="no_contacts_selector">Sem contatos para exibir</string>
+  <string name="no_contacts_selector_action">Por favor, volte aqui depois de adicionar um contato</string>
   <string name="forum_shared_snackbar">Fòrum compartilhado com os contatos escolhidos</string>
   <string name="forum_share_message">Adicionar uma mensagem (opcional)</string>
   <string name="forum_share_error">Houve um erro em compartilhar esse fórum.</string>
@@ -260,6 +277,7 @@
   <string name="blogs_blog_post_received">Novo Post de Blog recebido</string>
   <string name="blogs_blog_post_scroll_to">Role Para</string>
   <string name="blogs_feed_empty_state">Nenhum post para ser exibido</string>
+  <string name="blogs_feed_empty_state_action">Posts de seus contatos e blogs que você está inscrito vão aparecer aqui\n\n Toque no ícone da caneta para escrever um post </string>
   <string name="blogs_remove_blog">Remover Blog</string>
   <string name="blogs_remove_blog_dialog_message">Você tem certeza que quer remover este blog?\n\nOs posts serão removidos do seu dispositivo mas não dos dispositivos das outras pessoas.\n\nContatos com quem você tenha compartilhado este blog devem parar de receber atualizações dele.</string>
   <string name="blogs_remove_blog_ok">Remover</string>
@@ -297,29 +315,50 @@
   <string name="blogs_rss_feeds_manage_empty_state">Nenhum feed RSS para ser exibido\n\nPressione o ícone + para importar um feed</string>
   <string name="blogs_rss_feeds_manage_error">Houve um problema ao carregar seus Feeds. Por favor tente novamente.</string>
   <!--Settings Display-->
+  <string name="pref_language_title">Linguagem &amp; região</string>
+  <string name="pref_language_changed">Essa configuração vai tomar efeito quando você reiniciar o Briar. Por favor saia e reinicie o Briar.</string>
+  <string name="pref_language_default">Padrão do sistema</string>
   <string name="display_settings_title">Visualização</string>
   <string name="pref_theme_title">Tema</string>
   <string name="pref_theme_light">Claro</string>
   <string name="pref_theme_dark">Escuro</string>
+  <string name="pref_theme_auto">Automático (dia)</string>
   <string name="pref_theme_system">Padrão do Sistema</string>
   <!--Settings Network-->
   <string name="network_settings_title">Redes</string>
   <string name="bluetooth_setting">Conectar via Bluetooth</string>
   <string name="bluetooth_setting_enabled">Sempre que estiver perto de contatos</string>
   <string name="bluetooth_setting_disabled">Somente quando adicionando contatos</string>
+  <string name="tor_network_setting">Conectar via Internet (Tor)</string>
+  <string name="tor_network_setting_automatic">Automático baseado na localização </string>
+  <string name="tor_network_setting_without_bridges">Usar o Tor sem pontes</string>
+  <string name="tor_network_setting_with_bridges">Usar tor com pontes</string>
+  <string name="tor_network_setting_never">Não conectar</string>
   <!--How and when Tor will connect after Automatic: E.g. Don't connect (in China) or Use Tor with bridges (in Belarus)-->
+  <string name="tor_network_setting_summary">Automático: %1$s (em %2$s) </string>
+  <string name="tor_mobile_data_title">Usar dados moveis</string>
   <!--Settings Security and Panic-->
   <string name="security_settings_title">Segurança</string>
+  <string name="pref_lock_title">Bloqueio de Tela</string>
+  <string name="pref_lock_summary">Use o bloqueio de tela do dispositivo para proteger o Briar enquanto estiver conectado</string>
+  <string name="pref_lock_disabled_summary">Para usar esse recurso, configure um bloqueio de tela para seu dispositivo</string>
+  <string name="pref_lock_timeout_title">Tempo limite de inatividade de bloqueio de tela</string>
   <!--The %s placeholder is replaced with the following time spans, e.g. 5 Minutes, 1 Hour-->
+  <string name="pref_lock_timeout_summary">Quando o briar não estiver sendo usando, bloquear automaticamente após %s</string>
   <!--Will be shown in a list of lock times. Should fit into the %s of "automatically lock it after %s"-->
+  <string name="pref_lock_timeout_1">1 minuto</string>
   <!--Will be shown in a list of lock times. Should fit into the %s of "automatically lock it after %s"-->
   <string name="pref_lock_timeout_5">5 minutos</string>
   <!--Will be shown in a list of lock times. Should fit into the %s of "automatically lock it after %s"-->
+  <string name="pref_lock_timeout_15">15 minutos</string>
   <!--Will be shown in a list of lock times. Should fit into the %s of "automatically lock it after %s"-->
+  <string name="pref_lock_timeout_30">30 minutos</string>
   <!--Will be shown in a list of lock times. Should fit into the %s of "automatically lock it after %s"-->
   <string name="pref_lock_timeout_60">1 hora</string>
   <string name="pref_lock_timeout_never">Nunca</string>
+  <string name="pref_lock_timeout_never_summary">Nunca bloquear o Briar automaticamente</string>
   <string name="change_password">Mudar Senha</string>
+  <string name="current_password">Senha atual</string>
   <string name="choose_new_password">Nova senha</string>
   <string name="confirm_new_password">Confirmar nova senha</string>
   <string name="password_changed">Senha alterada com sucesso.</string>
@@ -340,6 +379,8 @@
   <string name="uninstall_setting_summary">Isso requer configuração manual em um evento de pânico</string>
   <!--Settings Notifications-->
   <string name="notification_settings_title">Notificações</string>
+  <string name="notify_sign_in_title">Lembre-me de fazer login</string>
+  <string name="notify_sign_in_summary">Mostrar um lembrete quando o telefone é iniciado ou o aplicativo foi atualizado</string>
   <string name="notify_private_messages_setting_title">Mensagens privadas</string>
   <string name="notify_private_messages_setting_summary">Mostrar alertas para mensagens privadas</string>
   <string name="notify_private_messages_setting_summary_26">Configurar alertas para mensagens privadas</string>
@@ -398,4 +439,10 @@
   <string name="qr_code">Código QR</string>
   <string name="show_qr_code_fullscreen">Mostrar o código QR na tela cheia</string>
   <!--App Locking-->
+  <string name="lock_unlock">Desbloquear o Briar</string>
+  <string name="lock_unlock_verbose">Digite o PIN, padrão ou senha do seu dispositivo para desbloquear o Briar</string>
+  <string name="lock_unlock_fingerprint_description">Encoste no leitor de impressão digital com o dedo cadastrado para continuar</string>
+  <string name="lock_unlock_password">Usar senha</string>
+  <string name="lock_is_locked">O Briar está desbloqueado</string>
+  <string name="lock_tap_to_unlock">Toque para desbloquear</string>
 </resources>
